--- a/deatil.css
+++ b/deatil.css
@@ -189,20 +189,6 @@
 }
 
 /*--------------------------------------------*/
-.header1 {
-  background-color: #16BAE4;
-  height: 35px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 0 20px;
-  box-shadow: 0 0 3px #000;
-  font-size: 17px;
-  color: white;
-  padding-top: 5px;
-  
-}
-
 
 .img-magnifier-glass {
   position: absolute;
@@ -374,7 +360,7 @@
 
 
 
-.discount-banner1 {
+/* .discount-banner1 {
   background-color: #28a745;
   color: white;
   text-align: center;
@@ -385,6 +371,6 @@
   font-weight: bold;
   font-size: 14px;
   margin-top: -30px;
-}
+} */
 /*-----------------------------------------------------------------------------------------------------*/
 
